--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Install Dependencies
         run: npm i
+        # npm run build
       - name: Build Application
         run: npm run build  
       - name: Run Unit Tests
