--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,16 @@ jobs:
       
       - name: List Files in Distribution Directory
         run: ls -R ./dist
+        
+      # Deploy Requirements:
+      #- name: Install Deploy Requirement
+      #  run: npm run deploy-requirement 
+      
+
+      - name: Deploy
+        if: github.event.pull_request.merged == true
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist/hello-world/
+          enable_jekyll: true
